--- a/build.gradle
+++ b/build.gradle
@@ -304,7 +304,7 @@ configure([rootProject] + javaProjects) { project ->
 
     apply plugin: "java"
     apply plugin: "java-test-fixtures"
-    apply plugin: "checkstyle"
+//    apply plugin: "checkstyle"
     apply plugin: 'org.springframework.build.compile'
     apply from: "${rootDir}/gradle/custom-java-home.gradle"
     apply from: "${rootDir}/gradle/ide.gradle"
@@ -355,7 +355,7 @@ configure([rootProject] + javaProjects) { project ->
         // JSR-305 only used for non-required meta-annotations
         compileOnly("com.google.code.findbugs:jsr305")
         testCompileOnly("com.google.code.findbugs:jsr305")
-        checkstyle("io.spring.javaformat:spring-javaformat-checkstyle:0.0.15")
+//        checkstyle("io.spring.javaformat:spring-javaformat-checkstyle:0.0.15")
     }
 
     ext.javadocLinks = [
